--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/brownies.html">Brownies</a>
 </body>
 </html>
