Rename brownies clickable text to sweet and sour

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna</a>
     <a href="./recipes/brownies.html">Brownies</a>
-    <a href="./recipes/sweetNsour.html">Brownies</a>
+    <a href="./recipes/sweetNsour.html">Sweet and Sour</a>
 </body>
 </html>
