Add links in list -index page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/brownies.html">Brownies</a>
-    <a href="./recipes/sweetNsour.html">Sweet and Sour</a>
+    <ul>
+   <li> <a href="./recipes/lasagna.html">Lasagna</a> </li>
+   <li> <a href="./recipes/brownies.html">Brownies</a> </li>
+   <li> <a href="./recipes/sweetNsour.html">Sweet and Sour</a></li></ul>
 </body>
 </html>
