Add sweet and sour recipe

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -27,7 +27,7 @@
             <li>Crack 3 eggs and 3 vanilla</li>
             <li>Mix</li>
             <li>Add the flour</li>
-            <li>LAdd the cocoa</li>
+            <li>Add the cocoa</li>
             <li>Mix</li>
             <li>Add your mixture in a tray</li>
             <li>Heat the oven on 180 degrees and leave tray inside for 25 minutes</li>
